@@ -68,7 +68,8 @@ public class UploadedFile implements Serializable {
     private String postProcessingResult;
     // like post processor but only called when validating and no post processing result - results of validation are in system data
     private String validation;
-    private final String fileEncoding;
+    // todo - actually use this! It's been checked but not set . . .
+    private String fileEncoding;
     // heading definitions. At its most simple it would be a list of strings but it can be a lookup based on file headings and there could be multiple headingss so
     private List<String> simpleHeadings;
 
