@@ -95,7 +95,7 @@ gzksu-azq01.logonpagecolour=#eded24
 gzksu-azq01.logonpagemessage=<br/><b>UAT System</b>
 gzksu-azq01.groovydir=/home/CawleyE/groovy
 
-gzksu-azq01.xmlscandir=
+gzksu-azq01.xmlscandir=/mnt/BSX/outbox
 gzksu-azq01.xmlscandb=Risk Solutions
 gzksu-azq01.xmldestinationdir=/mnt/BSX/inbox
 
@@ -110,6 +110,6 @@ gzksp-azq01.logonpagecolour=#ed1b24
 gzksp-azq01.logonpagemessage=
 gzksp-azq01.groovydir=/home/CawleyE/groovy
 
-gzksp-azq01.xmlscandir=
+gzksp-azq01.xmlscandir=/mnt/BSX/outbox
 gzksp-azq01.xmlscandb=Risk Solutions
 gzksp-azq01.xmldestinationdir=/mnt/BSX/inbox
